--- a/frontweb/src/pages/ProductDetails/styles.css
+++ b/frontweb/src/pages/ProductDetails/styles.css
@@ -34,6 +34,9 @@
   text-align: center;
   margin-bottom: 20px;
   border: 1px solid red;
+  border: 1px solid #e1e1e1;
+  border-radius: 20px;
+  padding: 10px;
 }
 
 .img-container img {
@@ -52,7 +55,9 @@
 }
 
 .description-container {
-  border: 1px solid red;
+  border: 1px solid #e1e1e1;
+  border-radius: 20px;
+  padding: 10px;
 }
 
 .description-container h2 {
@@ -63,8 +68,71 @@
 }
 
 .description-container p {
-    color: #9e9e9e;
-    letter-spacing: -0.015em;
-    font-size: 0.6em;
+  color: #9e9e9e;
+  letter-spacing: -0.015em;
+  font-size: 0.6em;
+}
+
+@media (min-width: 576px) {
+  .product-details-container {
+    padding: 20px;
+    font-size: 32px;
+  }
+
+  .product-details-card {
+    padding: 20px;
+  }
+}
+
+@media (min-width: 992px) {
+  .product-details-container {
+    padding: 40px;
+    font-size: 32px;
+  }
+
+  .product-details-card {
+    padding: 40px;
+  }
+
+  .img-container img {
+    width: 50%;
+  }
+
+  .description-container {
+    padding: 40px;
+  }
+
+  .name-price-container {
+    display: flex;
+    justify-content: space-between;
+  }
+}
+
+@media (min-width: 1200px) {
+  .name-price-container {
+    display: block;
+  }
+
+  .img-container img {
+      height: 280px;
+    width: auto;
+  }
+
+  .description-container {
+    min-height: 302px;
+  }
+
+}
+
+@media (min-width: 1400px) {
+    .img-container img {
+        height: 480px;
+      width: auto;
     }
   
+    .description-container {
+      min-height: 502px;
+    }
+  
+}
+
