--- a/frontweb/src/components/Navbar/styles.css
+++ b/frontweb/src/components/Navbar/styles.css
@@ -1,28 +1,56 @@
 .main-nav {
-    padding-left: 40px;
-    min-height: 70px;
+  padding-left: 40px;
+  min-height: 70px;
 }
 
-.nav-logo-text, .nav-logo-text {
-    color: #fff;
+.nav-logo-text,
+.nav-logo-text {
+  color: #fff;
 }
 
 .main-menu {
-    display: flex;
-    font-size: 18px;
-    width: 380px;
-    justify-content: space-between;
+  display: flex;
+  font-size: 18px;
+  width: 380px;
+  justify-content: space-between;
 }
 
 .main-menu a {
-    color: rgb(255, 255, 255, 0.5);
+  color: rgb(255, 255, 255, 0.5);
 }
 
 .main-menu a:hover {
-    color: #fff;
+  color: #fff;
 }
 
 .main-menu a.active {
+  color: #fff;
+  font-weight: 700; /*bold*/
+}
+
+.nav-login-logout {
+  display: none;
+}
+
+.nav-user-name {
+  display: none;
+}
+
+@media (min-width: 768px) {
+  .nav-login-logout {
+    display: unset;
     color: #fff;
-    font-weight: 700; /*bold*/
+    margin-right: 15px;
+  }
+}
+
+@media (min-width: 992px) {
+  .nav-login-logout {
+    margin-right: 40px;
+  }
+  .nav-user-name {
+    display: unset;
+    font-weight: unset;
+    margin-right: 20px;
+  }
 }
